# CoronaLab

./: .gitignore  .readthedocs.yml  README.rst  pyproject.toml  readthedocs.yaml  tox.ini
corona_lab/: analysis.py  build_corona.py  ecm.py  freefree.py  utils.py
corona_lab/tests/: test_model.py
corona_lab/tests/data/: example_model.ecsv  process_fieldlines_ex.ecsv
docs/: conf.py  index.rst
model_corona/: __init__.py  analysis.py  build_corona.py  corona.py  radio.py  utils.py
model_corona/tests/: test_radio.py  test_utils.py
model_corona/tests/data/: example_model.ecsv
